@startuml orm_preferences_identity_slim
' run:
' cd docs/diagrams/src
' plantuml -tpng -Ddpi=300 -o ../export orm_preferences_identity_slim.puml

' --- Common style ---
hide circle
skinparam Shadowing false
skinparam RoundCorner 8
skinparam ClassAttributeIconSize 0
skinparam DefaultFontName Arial
skinparam DefaultFontSize 18
skinparam ArrowColor #333333
skinparam LineColor #333333
skinparam PackageBorderColor #333333
skinparam PackageBackgroundColor #FFFFFF
skinparam ClassBorderColor #333333
skinparam ClassBackgroundColor #FFFFFF
skinparam ObjectBorderColor #333333
skinparam ObjectBackgroundColor #FFFFFF
skinparam NoteBackgroundColor #FFFFFF
skinparam NoteBorderColor #333333
skinparam BackgroundColor #FFFFFF
skinparam RectangleBackgroundColor #FFFFFF
skinparam RectangleBorderColor #333333

' --- Layout tuning for A4 portrait readability ---
top to bottom direction
skinparam linetype ortho
skinparam ranksep 55
skinparam nodesep 25
skinparam padding 10

package "ORM — Identity + Preferences (slim)" {

  package "Identity / Auth" as P_ID {
    together {
      class Doctor {
        +id : int
        +first_name : str
        +last_name : str
        +role : DoctorRole
        +is_active : bool
        +is_head : bool
        +email : str?
      }

      class User {
        +id : int
        +email : str
        +role : UserRole
        +is_active : bool
        +doctor_id : int?
        +created_at : datetime
      }

      class PasswordResetToken {
        +id : int
        +user_id : int
        +token : str
        +expires_at : datetime
      }
    }
  }

  package "Preferences" as P_PREF {
    together {
      class PreferenceWorking {
        +id : int
        +doctor_id : int
        +year : int
        +month : int
        +lock_version : int
        --
        +unavailable_onsite_days : list[int]?
        +unavailable_oncall_days : list[int]?
        +preferred_onsite_days : list[int]?
        +preferred_oncall_days : list[int]?
        --
        +allow_weekend_consecutive_onsite_oncall : bool
        +preferred_partners : list[int]?
        +comments : str?
        --
        +last_saved_at : datetime?
      }

      class PreferenceVersion {
        +id : int
        +doctor_id : int
        +year : int
        +month : int
        +kind : str
        +payload : JSON
        +created_at : datetime
        +note : str?
      }

      class PreferencePointer {
        +id : int
        +doctor_id : int
        +year : int
        +month : int
        +current_version_id : int?
        +submitted_at : datetime?
      }

      class PreferenceDeadline {
        +id : int
        +year : int
        +month : int
        +deadline_utc : datetime
        +org_timezone : str
      }
    }
  }
}

' =========================
' Relationships (FK / intent)
' =========================

User "0..1" --> "1" Doctor : doctor_id (unique)

PasswordResetToken "0..1" --> "1" User : user_id (unique)

PreferenceWorking "*" --> "1" Doctor : doctor_id
PreferenceVersion "*" --> "1" Doctor : doctor_id
PreferencePointer "*" --> "1" Doctor : doctor_id

PreferencePointer "0..1" --> "1" PreferenceVersion : current_version_id

' =========================
' Layout helpers (hidden links)
' =========================
P_ID -[hidden]right-> P_PREF

PasswordResetToken -[hidden]down-> User
User -[hidden]down-> Doctor

PreferenceDeadline -[hidden]down-> PreferencePointer
PreferencePointer  -[hidden]down-> PreferenceVersion
PreferenceVersion  -[hidden]down-> PreferenceWorking
PreferenceWorking  -[hidden]down-> Doctor

@enduml
